--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
+####################### for backend #######################
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb://localhost:27017/chatapp
 JWT_SECRET = <your_jwt_secret>
+
+####################### for frontend #######################
+FRONTEND_DEPLOYMENT_LINK=http://localhost:3000
+
